# FacePam

./: .CMakeLists.txt.kate-swp  .err  .gitignore  CMakeLists.txt  README.md  config.cpp  config.hpp  facepam.conf  pam_facerec.cpp  seeta_recognizer.cpp  seeta_recognizer.hpp  test.cpp
